added the trips details

--- a/web_dashboard/templates/trips.html
+++ b/web_dashboard/templates/trips.html
@@ -40,12 +40,12 @@
     <div class="container-fluid content">
         <div class="row">
                 <div class="col-md-12 text-center">
-                        <h3 class="font-weight-bold" id="user-title"> Trip-details</h3>
+                        <h3 class="font-weight-bold" id="user-title"> Trips-details</h3>
                       </div>        
             <table id="usersData" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th class="bottom-th">Trip Type
+                        <th class="bottom-th">vehicle
                         </th>
                         <th class="bottom-th">Address
                         </th>
@@ -53,8 +53,7 @@
                         </th>
                         <th class="bottom-th">Rider
                         </th>
-                        <th class="bottom-th">Gender
-                        </th>
+                       
                         <th class="bottom-th">Sign-Up date
                         </th>
                         <th class="bottom-th">Status
@@ -69,7 +68,7 @@
                         <td class="pt-3-half" contenteditable="true">Kibera</td>
                         <td class="pt-3-half" contenteditable="true">Peter</td>
                         <td class="pt-3-half" contenteditable="true">Eddy</td>
-                        <td class="pt-3-half" contenteditable="true">Male</td>
+                        
                         <td class="pt-3-half" contenteditable="true">2011/04/25</td>
                         <td class="pt-3-half" contenteditable="true">$320,800</td>
                         <td class="pt-3-half">
@@ -88,7 +87,7 @@
                         <td class="pt-3-half" contenteditable="true">Moringa</td>
                         <td class="pt-3-half" contenteditable="true">Jemila</td>
                         <td class="pt-3-half" contenteditable="true">Lilian</td>
-                        <td class="pt-3-half" contenteditable="true">Female</td>
+                        
                         <td class="pt-3-half" contenteditable="true">2011/07/25</td>
                         <td class="pt-3-half" contenteditable="true">$170,750</td>
                         <td class="pt-3-half">
@@ -107,7 +106,7 @@
                         <td class="pt-3-half" contenteditable="true">Junction</td>
                         <td class="pt-3-half" contenteditable="true">Lilian</td>
                         <td class="pt-3-half" contenteditable="true">Anthony</td>
-                        <td class="pt-3-half" contenteditable="true">Female</td>
+                        
                         <td class="pt-3-half" contenteditable="true">2009/01/12</td>
                         <td class="pt-3-half" contenteditable="true">$86,000</td>
                         <td class="pt-3-half">
@@ -125,7 +124,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th class="bottom-th">Trip Type
+                        <th class="bottom-th">vehicle
                         </th>
                         <th class="bottom-th">Address
                         </th>
@@ -133,8 +132,7 @@
                         </th>
                         <th class="bottom-th">Rider
                         </th>
-                        <th class="bottom-th">Gender
-                        </th>
+                        
                         <th class="bottom-th">Sign-Up date
                         </th>
                         <th class="bottom-th">Status
