Added view function to fetch admin profile details from database.

--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -23,14 +23,14 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            {% if auth_a %}
+            {% if user %}
           <li class="nav-item">
               <a class="nav-link waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
           </li>
           <li class="nav-item" id="p-icon">
               <a class="nav-link waves-effect waves-light" href="{%url 'prof-create'%}" ><i class="fas fa-user fa-2x"></i></a>
           </li>
-        {%else%}
+         {%else%}
           <li class="nav-item">
               <a class='btn btn-default' href="{% url 'admin-signIn'%}" id="in">Login</a>
           </li>
