--- a/web_dashboard/templates/administrator.html
+++ b/web_dashboard/templates/administrator.html
@@ -39,14 +39,18 @@
             <div class="col-md-6 ">
                 <div class="admin-details">
                     <div class="card text-center admin">
+                        {%for name in admin_prof%}
                         <h2>Name</h2>
-                        <h4 class="identity">Aisa</h4>
+                        <h4 class="identity">{{name}}</h4>
+                        {% endfor %}
                     </div>
                     <div class="card text-center admin">
+                        {%for email,address in admin_prof%}
                         <h2>Email</h2>
                         <h5 class="identity">aisajemila@gmail.com</h5>
                         <h2>Home address</h2>
                         <p class="identity">1st Avenue, Parklands.</p>
+                        {% endfor %}
                     </div>
                 </div>                
             </div>
