--- a/web_dashboard/templates/signIn.html
+++ b/web_dashboard/templates/signIn.html
@@ -1,53 +1,117 @@
-{% extends 'base.html' %}
+{% load bootstrap4 %}
+{% load static %}
 
-{% block content %}
-      <div class="container-fluid">
-        <div class="row auth-form">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                {% if message %}
-                <script>
-                    alert('{{message}}')
-                </script>
-                {% endif %}
-    
-                <!-- Default form login -->
-                <form class="text-center border border-light p-5 auth-form" action="{% url 'admin-welcome'%}" method="post">
-                    {% csrf_token %}
-                    <p class="h4 mb-4">Sign in</p>
-                    <!-- Email -->
-                    <input type="email" id="defaultLoginFormEmail" name="email" class="form-control mb-4" placeholder="E-mail">
-                    <!-- Password -->
-                    <input type="password" id="defaultLoginFormPassword" name="pass" class="form-control mb-4" placeholder="Password">
-    
-                    <div class="d-flex justify-content-around">
-                        <div>
-                            <!-- Remember me -->
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                                <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                            </div>
-                        </div>
-                        <div>
-                            <!-- Forgot password -->
-                            <a href="">Forgot password?</a>
-                        </div>
-                    </div>
-    
-                    <!-- Sign in button -->
-                    <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
-    
-                    <!-- Register -->
-                    <p>Not an admin?
-                        <a href="{% url 'admin-signUp'%}">Register</a>
-                    </p>
-    
-                </form>
-                  
-            </div>
-            <div class="col-md-3"></div>
-            
-        </div>
-      </div>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% if title %}
+    <title>{{title}}</title>
+  {% else %}
+  <title>Move Me</title>
+  {% endif %}
+
+{% block styles %}
+  {% bootstrap_css %}
+  <!--Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Asap&display=swap" rel="stylesheet">
+  <!--End of fonts-->
+
+  <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.0/css/mdb.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="{%static 'css/aisa.css'%}">
 {% endblock %}
+</head>
+<body>
+    {% block content %}
+    <div class="container-fluid">
+      <div class="row auth-form">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
+              {% if message %}
+              <script>
+                  alert('{{message}}')
+              </script>
+              {% endif %}
+  
+              <!-- Default form login -->
+              <form class="text-center border border-light p-5 auth-form" action="{% url 'admin-welcome'%}" method="post">
+                  {% csrf_token %}
+                  <p class="h4 mb-4">Sign in</p>
+                  <!-- Email -->
+                  <input type="email" id="defaultLoginFormEmail" name="email" class="form-control mb-4" placeholder="E-mail">
+                  <!-- Password -->
+                  <input type="password" id="defaultLoginFormPassword" name="pass" class="form-control mb-4" placeholder="Password">
+  
+                  <div class="d-flex justify-content-around">
+                      <div>
+                          <!-- Remember me -->
+                          <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                              <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                          </div>
+                      </div>
+                      <div>
+                          <!-- Forgot password -->
+                          <a href="">Forgot password?</a>
+                      </div>
+                  </div>
+  
+                  <!-- Sign in button -->
+                  <input class="btn btn-info btn-block my-4" type="submit" value="Sign In">
+  
+                  <!-- Register -->
+                  <p>Not an admin?
+                      <a href="{% url 'admin-signUp'%}">Register</a>
+                  </p>
+  
+              </form>
+                
+          </div>
+          <div class="col-md-3"></div>
+          
+      </div>
+    </div>
+
+{% endblock %} 
+ 
+
+  {% block scripts %}
+    {% bootstrap_javascript %}
+
+    <!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.0/js/mdb.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+  
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+  
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-firestore.js"></script>
+ 
+
+     
+    <script type="text/javascript" src="{% static 'js/aisa.js' %}"></script>
+  {% endblock %}
+  
+</body>
+</html>
