Added source code for getting upload file url.

--- a/web_dashboard/templates/trips.html
+++ b/web_dashboard/templates/trips.html
@@ -44,7 +44,7 @@
             <table id="usersData" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th class="bottom-th">vehicle
+                        <th class="bottom-th">Vehicle
                         </th>
                         <th class="bottom-th">Address
                         </th>
