--- a/web_dashboard/templates/welcome.html
+++ b/web_dashboard/templates/welcome.html
@@ -58,7 +58,7 @@
                             <div class="custom-file">
                                 <input type="file" class="custom-file-input btn btn-info" name="files[]" id="fileInput" aria-describedby="fileInput">
                                 <input type="hidden" name="url" id="url">
-                                <label class="custom-file-label" for="fileInput" id="url">File Label</label>
+                                <!-- <label class="custom-file-label" for="fileInput" id="url">File Label</label> -->
                             </div>
                             
                         </div>
