--- a/web_dashboard/templates/trips.html
+++ b/web_dashboard/templates/trips.html
@@ -8,7 +8,7 @@
                             aria-hidden="true"></i>
                         <span class="text">Dashboard</span>
                     </a></li>
-                <li class="nav-item"><a href="{% url 'admin-dash'%}" class="nav-link"><i class="fas fa-lock"
+                <li class="nav-item"><a href="{% url 'admin-details'%}" class="nav-link"><i class="fas fa-lock"
                             aria-hidden="true"></i>
                         <span class="text">Admin</span>
                     </a></li>
