--- a/web_dashboard/templates/users.html
+++ b/web_dashboard/templates/users.html
@@ -9,7 +9,7 @@
                   <li class="nav-item"><a href="{% url 'dashboard'%}" class="nav-link"><i class="fas fa-tachometer-alt" aria-hidden="true"></i>
                       <span class="text">Dashboard</span>
                   </a></li>
-                  <li class="nav-item"><a href="{% url 'admin-dash'%}" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
+                  <li class="nav-item"><a href="{% url 'admin-details'%}" class="nav-link"><i class="fas fa-lock" aria-hidden="true"></i>
                       <span class="text">Admin</span>
                   </a></li>
                   <li class="nav-item"><a href="{% url 'users'%}" class="nav-link"><i class="fas fa-users" aria-hidden="true"></i>
