alterations of the navbar menu list.

--- a/web_dashboard/static/css/aisa.css
+++ b/web_dashboard/static/css/aisa.css
@@ -45,6 +45,9 @@ body{
 .fas{
   color: #00adb5;
 }
+.fa-user:hover{
+  background-color: #ffffff;
+}
 .charts{
   padding-top: 3%;
   padding-bottom: 3%;
