--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -8,10 +8,7 @@
             <li class="nav-item active">
                <a class="nav-link waves-effect waves-light" href="{% url 'dashboard'%}">Dashboard<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link waves-effect waves-light" href="{% url 'admin-signIn'%}">Account</a>
-            </li>
-        
+            
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
@@ -23,22 +20,19 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            {% if user %}
-          <li class="nav-item">
-              <a class="nav-link waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
-          </li>
-          <li class="nav-item" id="p-icon">
-              <a class="nav-link waves-effect waves-light" href="{%url 'prof-create'%}" ><i class="fas fa-user fa-2x"></i></a>
-          </li>
-         {%else%}
-          <li class="nav-item">
-              <a class='btn btn-default' href="{% url 'admin-signIn'%}" id="in">Login</a>
-          </li>
-          
-          <li class="nav-item">
-              <a class="nav-link waves-effect waves-light" href="{% url 'admin-signUp'%}" id="signup">Sign Up</a>
-          </li>
-           {% endif%} 
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+                <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
+                    {%if user%}
+                    <a class="dropdown-item waves-effect waves-light" href="{%url 'logout'%}" id="out">Logout</a>
+                    <a class="dropdown-item waves-effect waves-light" href="{%url 'prof-create'%}" ><i class="fas fa-user fa-2x"></i></a>
+                    {%else%}
+                    <a class='btn btn-default' href="{% url 'admin-signIn'%}" id="in">Login</a>
+                    <a class="dropdown-item waves-effect waves-light" href="{% url 'admin-signUp'%}" id="signup">Sign Up</a>
+                    {%endif%}
+                </div>
+            </li>
+            
         </ul>
     </div>
 </nav>
