--- a/web_dashboard/templates/navbar.html
+++ b/web_dashboard/templates/navbar.html
@@ -7,8 +7,10 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                <a class="nav-link waves-effect waves-light" href="{% url 'dashboard'%}">Dashboard<span class="sr-only">(current)</span></a>
-            </li>
+            </li>            
             
+        </ul>
+        <ul class="navbar-nav mx-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
